fix alignment and style issues for tooltips

--- a/assets/scss/vis-table.scss
+++ b/assets/scss/vis-table.scss
@@ -42,6 +42,7 @@
       display: flex;
       justify-content: space-between;
       height: 25px;
+      align-items: center;
     }
 
     .chart-options {
@@ -72,7 +73,6 @@
         top: 1px;
         left: 3px;
       }
-
     }
 
     .hover-date-value {
@@ -159,7 +159,7 @@
         margin: 0 1rem;
       }
 
-      @include desktop {
+      @include tablet {
         width: auto;
         border-radius: 0 20px 20px 0;
       }
@@ -185,7 +185,6 @@
   }
 
   &.is-hovered {
-
     .hover-date,
     .hover-values {
       opacity: 1;
